# DeltaRobot

./: .gitignore  .gitmodules  README.md  random_points.csv  robot_workspace.html  ruff.toml  scan_trajectory.csv  snake_scan.py  test_motors.py
.github/workflows/: main.yml
delta_robot/: CMakeLists.txt  README.md  package.xml
delta_robot/config/: delta_config.yaml
delta_robot/delta_robot/: joint_state_bridge.py  motor_control_node.py
delta_robot/include/delta_robot/: delta_motor_control.hpp  motion_planner.hpp  motor_control.hpp  range_scanner.hpp  trajectory_generator.hpp
delta_robot/launch/: delta_motion_planner.launch.xml  delta_robot.launch.py  motor_control.launch.xml  traj_gen.launch.xml
delta_robot/src/: delta_motor_control.cpp  delta_trajectory_generator.cpp  kinematics.cpp  motion_planner.cpp  motor_control.cpp  range_scanner.cpp  trajectory_generator.cpp
delta_robot_description/: CMakeLists.txt  package.xml
delta_robot_description/materials/scripts/: aruco.material
delta_robot_description/meshes/: Bevel1.stl  Bevel2.stl  EE.stl  EEBase.stl  Frame.stl  T.stl  arm1.stl  arm2.stl  arm3.stl  arm4.stl  arm5.stl  arm6.stl  base.stl  forearm1.stl  forearm2.stl  forearm3.stl
delta_robot_description/models/: box.sdf  conveyor.sdf  landing_pad.sdf  model.config  model.sdf  model.urdf
delta_robot_sensors/: CMakeLists.txt  README.md  package.xml
delta_robot_sensors/config/: sensors_config.yaml
delta_robot_sensors/include/delta_robot_sensors/: bno055.hpp  bno055_node.hpp  kalman.hpp  smbus_functions.h  vl53l1x.hpp  vl53l1x_node.hpp  vl53l1x_registers.hpp
delta_robot_sensors/launch/: sensors.launch.xml
delta_robot_sensors/src/: bno055_node.cpp  kalman.cpp  vl53l1x.cpp  vl53l1x_node.cpp
delta_robot_sim/: CMakeLists.txt  package.xml
delta_robot_sim/config/: config.config  delta_robot.rviz  ros2_controllers.yaml  ros_gz_bridge.yaml
delta_robot_sim/launch/: delta_robot_spawn.launch.py
delta_robot_sim/scripts/: plotter3d.py
delta_robot_sim/worlds/: empty.sdf
deltarobot_interfaces/: CMakeLists.txt  package.xml
deltarobot_interfaces/msg/: DeltaJointVels.msg  DeltaJoints.msg  RobotConfig.msg
deltarobot_interfaces/srv/: GetDynamixelPositions.srv  GetDynamixelVelocities.srv  MotionDemo.srv  MoveToConfiguration.srv  MoveToPoint.srv  PlayDemoTrajectory.srv  SetJointLimits.srv
deltarobot_kinematics/config/: delta_config.yaml
deltarobot_kinematics/include/deltarobot_kinematics/: kinematics.hpp
deltarobot_kinematics/src/: kinematics.cpp
deltarobot_motion_planner/: CMakeLists.txt  package.xml
deltarobot_motion_planner/include/deltarobot_motion_planner/: delta_motion_planner.hpp  scanning.hpp
deltarobot_motion_planner/launch/: delta_motion_planner.launch.xml
deltarobot_motion_planner/src/: delta_motion_planner.cpp  range_scanner.cpp  scanning.cpp
deltarobot_motor_control/include/deltarobot_motor_control/: delta_motor_control.hpp  scanning.hpp
deltarobot_motor_control/src/: delta_motor_control.cpp  scanning.cpp
deltarobot_trajectory_generator/: CMakeLists.txt
deltarobot_trajectory_generator/src/: delta_trajectory_generator.cpp
