<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_robot</name>
  <version>1.0.0</version>
  <description>Motion control for Delta Robots</description>
  <maintainer email="likhiacharya@gmail.com">Likhithraj T Acharya</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- CPP Dependencies -->
  <depend>Eigen3</depend>

  <!-- Delta Robot Packages -->
  <depend>deltarobot_interfaces</depend>
  <depend>delta_robot_sensors</depend>

  <!-- ROS Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
